add login component, menu button, mofdify routing

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,1 +1,6 @@
-<p>header works!</p>
+<mat-toolbar color="#09121E" class="example-toolbar">
+    <button mat-icon-button (click)="toggleSidenav()"><mat-icon>menu</mat-icon></button>
+    <img calss="imgLogo" src="../../../assets/img/logod.png" />
+    <h1 class="title">IPDS</h1>
+</mat-toolbar>
+
