--- a/src/app/core/auth/login/login.component.html
+++ b/src/app/core/auth/login/login.component.html
@@ -7,17 +7,33 @@
     <mat-card-content>
         <form class="example-form">
             <mat-form-field class="example-full-width" appearance="fill">
-                <mat-label>Favorite food</mat-label>
-                <input matInput placeholder="Ex. Pizza" value="Sushi">
+              <mat-label>Email</mat-label>
+              <input type="email" matInput [formControl]="emailFormControl" placeholder="Ex. pat@example.com">
+              <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
+                Please enter a valid email address
+              </mat-error>
+              <mat-error *ngIf="emailFormControl.hasError('required')">
+                Email is <strong>required</strong>
+              </mat-error>
             </mat-form-field>
 
             <mat-form-field class="example-full-width" appearance="fill">
-                <mat-label>Leave a comment</mat-label>
-                <textarea matInput placeholder="Ex. It makes me feel..."></textarea>
-            </mat-form-field>
-        </form>
+                <mat-label>Password</mat-label>
+                <input type="password" matInput [formControl]="passwordFormControl" placeholder="Ex. pat@example.com">
+                <mat-error *ngIf="passwordFormControl.hasError('required')">
+                  Please enter a valid password
+                </mat-error>
+                <!-- <mat-error *ngIf="emailFormControl.hasError('required')">
+                  Email is <strong>required</strong>
+                </mat-error> -->
+              </mat-form-field>
+
+              <button mat-raised-button (click)="login()" [disabled] = "!emailFormControl.valid || !passwordFormControl.valid">Login</button>
+
+              <span>Not having an account yet ? <span class="redirect" routerLink="/signup">Sign Up</span></span>
+
+
+          </form>
     </mat-card-content>
-
-
 
 </mat-card>
