--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -8,11 +8,11 @@
       <span>Login</span>
     </button>
     <button mat-menu-item 
-    (click)="routeToSignin()">
+    (click)="routeToSignup()">
       <mat-icon>login</mat-icon>
       <span>Sign Up</span>
     </button>
-    <button mat-menu-item disabled
+    <button mat-menu-item 
     (click)="logout()">
       <mat-icon>logout</mat-icon>
       <span>Logout</span>
