--- a/src/app/core/auth/signup/signup.component.html
+++ b/src/app/core/auth/signup/signup.component.html
@@ -6,7 +6,7 @@
     </mat-card-header>
     <mat-card-content>
         <form class="example-form">
-            <mat-form-field class="example-full-width" appearance="fill">
+            <mat-form-field class="example-full-width" appearance="outline">
                 <mat-label>Email</mat-label>
                 <input type="email" matInput [formControl]="emailFormControl" placeholder="Ex. pat@example.com">
                 <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
@@ -17,7 +17,7 @@
                 </mat-error>
             </mat-form-field>
 
-            <mat-form-field class="example-full-width" appearance="fill">
+            <mat-form-field class="example-full-width" appearance="outline">
                 <mat-label>Password</mat-label>
                 <input type="password" matInput [formControl]="passwordFormControl">
                 <mat-error *ngIf="passwordFormControl.hasError('required')">
@@ -26,7 +26,7 @@
 
             </mat-form-field>
 
-            <mat-form-field class="example-full-width" appearance="fill">
+            <mat-form-field class="example-full-width" appearance="outline">
                 <mat-label>Password</mat-label>
                 <input type="password" matInput [formControl]="rePasswordFormControl">
                 <mat-error *ngIf="rePasswordFormControl.hasError('required')">
