--- a/src/app/core/account/account.component.html
+++ b/src/app/core/account/account.component.html
@@ -1,44 +1,31 @@
-<form class="example-form">
-    <mat-form-field class="example-full-width" appearance="fill">
-      <mat-label>Company (disabled)</mat-label>
-      <input matInput disabled value="Google">
-    </mat-form-field>
-  
-    <table class="example-full-width" cellspacing="0"><tr>
-      <td><mat-form-field class="example-full-width" appearance="fill">
-        <mat-label>First name</mat-label>
-        <input matInput>
-      </mat-form-field></td>
-      <td><mat-form-field class="example-full-width" appearance="fill">
-        <mat-label>Long Last Name That Will Be Truncated</mat-label>
-        <input matInput>
-      </mat-form-field></td>
-    </tr></table>
-  
-    <p>
+<mat-card>
+
+  <mat-card-header>
+    <mat-card-title>
+      Account
+    </mat-card-title>
+  </mat-card-header>
+
+  <mat-card-content>
+
+
+    <form class="example-form">
+      <!-- <mat-form-field class="example-full-width" appearance="fill">
+        <mat-label>Company (disabled)</mat-label>
+        <input matInput disabled value={{userEmail}}>
+      </mat-form-field> -->
+
       <mat-form-field class="example-full-width" appearance="fill">
-        <mat-label>Address</mat-label>
-        <textarea matInput placeholder="Ex. 100 Main St">1600 Amphitheatre Pkwy</textarea>
+        <mat-label>Email</mat-label>
+        <input matInput value={{userEmail}} disabled>
       </mat-form-field>
+
       <mat-form-field class="example-full-width" appearance="fill">
-        <mat-label>Address 2</mat-label>
-        <textarea matInput></textarea>
+        <mat-label>Last login</mat-label>
+        <input matInput value={{lastLogin}} disabled>
       </mat-form-field>
-    </p>
-  
-    <table class="example-full-width" cellspacing="0"><tr>
-      <td><mat-form-field class="example-full-width" appearance="fill">
-        <mat-label>City</mat-label>
-        <input matInput placeholder="Ex. San Francisco">
-      </mat-form-field></td>
-      <td><mat-form-field class="example-full-width" appearance="fill">
-        <mat-label>State</mat-label>
-        <input matInput placeholder="Ex. California">
-      </mat-form-field></td>
-      <td><mat-form-field class="example-full-width" appearance="fill">
-        <mat-label>Postal Code</mat-label>
-        <input matInput #postalCode maxlength="5" placeholder="Ex. 94105" value="94043">
-        <mat-hint align="end">{{postalCode.value.length}} / 5</mat-hint>
-      </mat-form-field></td>
-    </tr></table>
-  </form>
+    </form>
+
+  </mat-card-content>
+
+</mat-card>
