--- a/src/app/core/account/account.component.scss
+++ b/src/app/core/account/account.component.scss
@@ -1,15 +1,31 @@
 .example-form {
-    min-width: 150px;
-    max-width: 500px;
+    // min-width: 150px;
+    // max-width: 500px;
     width: 100%;
   }
-  
+
   .example-full-width {
     width: 100%;
   }
-  
+
   td {
     padding-right: 8px;
   }
 
   form { margin: 0 auto; }
+
+
+
+  mat-card {
+    width: 80%;
+    margin: 2% auto;
+    display: flex;
+    flex-direction: column;
+  }
+
+  mat-form-field {
+    width: 100%;
+    justify-content: center;
+    align-self: center;
+  }
+
