--- a/src/app/core/auth/login/login.component.scss
+++ b/src/app/core/auth/login/login.component.scss
@@ -3,40 +3,38 @@
     max-width: 500px;
     width: 100%;
   }
-  
+
   .example-full-width {
     width: 100%;
   }
 
   mat-card-content{
-    height: 50vh;
-    width: 50vw;
+    // height: 50vh;
+    // width: 50vw;
     display: flex;
     align-content: center;
     justify-content: center;
     align-items: center;
+    text-align: center;
   }
 
   mat-card{
-    height: 50vh;
-    width: 50vw;
-    margin: auto;
-    margin-top: 5%;
-    // height: 100vh;
-    // display: flex;
-    // justify-content: center;
-    // align-items: center;
-    // align-self: center;
-    // display:inline-block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
   }
 
 
   .example-form {
-    min-width: 150px;
-    max-width: 500px;
-    width: 100%;
+    // min-width: 150px;
+    // max-width: 500px;
+    // margin-top: 20%;
+    // width: 100%;
+    // height: 100%;
   }
-  
+
   .example-full-width {
     width: 100%;
   }
@@ -47,6 +45,6 @@
   }
 
   span {
-    padding-left: 10px;
+    // padding: 10px;
     cursor: pointer;
 }
