--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -3,16 +3,20 @@
   </button>
   <mat-menu #menu="matMenu" yPosition="above" xPosition="before">
     <button mat-menu-item
-    (click)="routeToLogin()">
+    (click)="routeToLogin()"
+    *ngIf="!isLoggedIn"
+    >
       <mat-icon>login</mat-icon>
       <span>Login</span>
     </button>
     <button mat-menu-item 
+    *ngIf="!isLoggedIn"
     (click)="routeToSignup()">
       <mat-icon>login</mat-icon>
       <span>Sign Up</span>
     </button>
     <button mat-menu-item 
+    *ngIf="isLoggedIn"
     (click)="logout()">
       <mat-icon>logout</mat-icon>
       <span>Logout</span>
