Fix bugs, add routeGuard
Fix reload error on dashboard.
Add routerGuard based on firebase logging in uid.
Add progress bars on getting user data/ add new data

--- a/src/app/core/auth/login/login.component.scss
+++ b/src/app/core/auth/login/login.component.scss
@@ -46,5 +46,10 @@
 
   span {
     // padding: 10px;
-    cursor: pointer;
+    // cursor: pointer;
+}
+
+.redirect {
+  cursor: pointer;
+  color: antiquewhite;
 }
