--- a/src/app/core/auth/signup/signup.component.html
+++ b/src/app/core/auth/signup/signup.component.html
@@ -39,7 +39,7 @@
                 [disabled]="!emailFormControl.valid || !passwordFormControl.valid || !rePasswordFormControl.valid">Sign
                 Up</button>
               <br>
-                <span>Go back to ? <span class="redirect" routerLink="/login">Log In</span></span>
+                <span>Go back to  <span class="redirect" routerLink="/login">Log In</span></span>
 
 
         </form>
