--- a/src/app/core/auth/signup/signup.component.scss
+++ b/src/app/core/auth/signup/signup.component.scss
@@ -42,5 +42,12 @@
 
   span {
       // margin-top: 100px;
-      cursor: pointer;
+      // cursor: pointer;
   }
+
+
+  .redirect {
+    cursor: pointer;
+    color: antiquewhite;
+  }
+  
