--- a/src/app/core/dashboard/dashboard.component.html
+++ b/src/app/core/dashboard/dashboard.component.html
@@ -2,18 +2,20 @@
   <mat-form-field>
     <input matInput type="text" placeholder="Filter" (keyup)="applyFilter($event)">
   </mat-form-field>
+  <mat-progress-bar mode="indeterminate" *ngIf="isLoadingDomains"></mat-progress-bar>
   <div class="edit-users mat-elevation-z8">
     <table mat-table class="full-width-table" matSort aria-label="Elements" [dataSource]="dataSource">
 
       <ng-container matColumnDef="subdomain">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Subdomain Name</th>
+        <th mat-header-cell *matHeaderCellDef>Subdomain Name</th>
         <td mat-cell *matCellDef="let row;">
+            <!-- <p>{{row.currentData.subdomainName}}</p> -->
           <input [formControl]="row.validator.get('subdomainName')" type="text" matInput>
         </td>
       </ng-container>
 
       <ng-container matColumnDef="ipfsLink">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>IPFS link</th>
+        <th mat-header-cell *matHeaderCellDef >IPFS link</th>
         <td mat-cell *matCellDef="let row;">
           <input [formControl]="row.validator.get('ipfsLink')" type="text" matInput>
         </td>
@@ -68,7 +70,7 @@
   </mat-error>
   </mat-form-field>
 
-
+  <mat-progress-bar mode="indeterminate" *ngIf="isLoadingAddDomains"></mat-progress-bar>
   <button mat-raised-button type="submit" [disabled]="!subdomainFormControl.valid || !ipfsLinkFormControl.valid"
   (click)="addUserDomain()"
   > Add </button>
