--- a/src/app/core/account/account.component.html
+++ b/src/app/core/account/account.component.html
@@ -24,6 +24,11 @@
         <mat-label>Last login</mat-label>
         <input matInput value={{lastLogin}} disabled>
       </mat-form-field>
+
+      <mat-form-field class="example-full-width" appearance="fill">
+        <mat-label>Is Admin</mat-label>
+        <input matInput value={{isAdmin}} disabled>
+      </mat-form-field>
     </form>
 
   </mat-card-content>
