--- a/src/app/core/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/core/admin-dashboard/admin-dashboard.component.html
@@ -6,6 +6,22 @@
     <div class="edit-users mat-elevation-z8">
       <table mat-table class="full-width-table" matSort aria-label="Elements" [dataSource]="dataSource">
   
+        <ng-container matColumnDef="userUid">
+          <th mat-header-cell *matHeaderCellDef>User Id</th>
+          <td mat-cell *matCellDef="let row;">
+              <p>{{row.currentData.id}}</p>
+            <!-- <input [formControl]="row.validator.get('subdomainName')" type="text" matInput> -->
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="userEmail">
+          <th mat-header-cell *matHeaderCellDef>User Email</th>
+          <td mat-cell *matCellDef="let row;">
+              <p>{{row.currentData.userEmail}}</p>
+            <!-- <input [formControl]="row.validator.get('subdomainName')" type="text" matInput> -->
+          </td>
+        </ng-container>
+
         <ng-container matColumnDef="subdomain">
           <th mat-header-cell *matHeaderCellDef>Subdomain Name</th>
           <td mat-cell *matCellDef="let row;">
@@ -29,7 +45,7 @@
         </ng-container> -->
   
         <ng-container matColumnDef="action">
-          <th mat-header-cell *matHeaderCellDef>Update</th>
+          <th mat-header-cell *matHeaderCellDef>Actions</th>
           <td mat-cell *matCellDef="let row; let i = index">
             <button *ngIf="row.editable" mat-icon-button color="primary" focusable="false" (click)="startEdit()">
               <mat-icon>edit</mat-icon>
@@ -37,9 +53,9 @@
             <button *ngIf="!row.editable" mat-icon-button color="primary" focusable="false" (click)="confirmEditCreate(row)">
               <mat-icon>check</mat-icon>
             </button>
-            <!-- <button mat-icon-button color="warn" focusable="false" (click)="cancelOrDelete()">
+            <button mat-icon-button color="warn" focusable="false" (click)="deleteUserDomain(row)">
               <mat-icon>close</mat-icon>
-            </button> -->
+            </button>
           </td>
         </ng-container>
   
