admin-dashboard call admin-firebase-service
admin-dashboard call admin-firebase-service
(still error  on delete)

--- a/src/app/core/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/core/admin-dashboard/admin-dashboard.component.html
@@ -9,7 +9,7 @@
         <ng-container matColumnDef="userUid">
           <th mat-header-cell *matHeaderCellDef>User Id</th>
           <td mat-cell *matCellDef="let row;">
-              <p>{{row.currentData.id}}</p>
+              <p>{{row.currentData.uid}}</p>
             <!-- <input [formControl]="row.validator.get('subdomainName')" type="text" matInput> -->
           </td>
         </ng-container>
