fix delete user domains
Fix delete user domains.
Unsubscribe observables onDestroy.

--- a/src/app/core/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/core/admin-dashboard/admin-dashboard.component.html
@@ -69,7 +69,7 @@
   
   </mat-card>
   
-  <mat-card>
+  <!-- <mat-card>
     <mat-form-field class="example-full-width" appearance="outline">
       <mat-label>Subdomain Name</mat-label>
       <input matInput [formControl]="subdomainFormControl">
@@ -90,12 +90,10 @@
     <button mat-raised-button type="submit" [disabled]="!subdomainFormControl.valid || !ipfsLinkFormControl.valid"
     (click)="addUserDomain()"
     > Add </button>
-  
-  
-  
+
   
   </mat-card>
-  
+   -->
   <!-- Copyright 2019 Google Inc. All Rights Reserved.
         Use of this source code is governed by an MIT-style license that
         can be found in the LICENSE file at http://angular.io/license -->
