add forgot-password/change-password, fix Ui bugs
add forgot-password/change-password components and link to firebase.
fix Ui bugs, error on delete data from admin dashboard when filter table.
Add footer text.

--- a/src/app/core/auth/change-password/change-password.component.html
+++ b/src/app/core/auth/change-password/change-password.component.html
@@ -1,1 +1,29 @@
-<p>change-password works!</p>
+<mat-card>
+
+    <mat-card-header>
+        <mat-card-title>
+            Change Password
+        </mat-card-title>
+    </mat-card-header>
+
+    <mat-card-content>
+
+
+        <form #changePasswordForm="ngForm" class="example-form" [formGroup]="changePasswFormGroup">
+
+            <mat-form-field class="example-full-width" appearance="fill">
+                <mat-label>New Password</mat-label>
+                <input matInput type="password" formControlName="newPassword">
+            </mat-form-field>
+
+            <mat-form-field class="example-full-width" appearance="fill">
+                <mat-label>Confirm New Password</mat-label>
+                <input matInput  type="password" formControlName="confirmNewPassword">
+            </mat-form-field>
+
+            <button mat-raised-button (click)="changePassword(changePasswordForm)" [disabled] = "!changePasswFormGroup.valid">Change</button>
+        </form>
+
+    </mat-card-content>
+
+</mat-card>
