--- a/src/app/core/auth/login/login.component.html
+++ b/src/app/core/auth/login/login.component.html
@@ -33,6 +33,9 @@
               <br>
               <span>Not having an account yet ? <span class="redirect" routerLink="/signup">Sign Up</span></span>
 
+              <br>
+              <span>Forgot password ? <span class="redirect" routerLink="/forgot-password">click here</span></span>
+
 
           </form>
     </mat-card-content>
