--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer>
     <div layout="row" layout-align="center center">
-        <h2>My Awesome Footer</h2>
+        <h4>Copyright © 2021 IPDS. All Rights Reserved.</h4>
     </div>
 </footer>
